# o.m.e.g.a.

./: .gitignore  Directory_Structure.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-nice-stone-04571010f.yml
backend/: API_Guide.md  __init__.py  assimilation_checklist.md  bridge.sh  deploy.sh  deploy_now.sh  docker-compose copy.yml  docker-compose.yml  framework_health_check.py  immediate_action_plan.md  main.py  pyproject.toml  requirements.txt  setup.py  transformation_guide.md
backend/docker/: agent.Dockerfile
backend/docs/: agent-tests.md  docker-container-ports.md  execution_order.md
backend/src/omega/: __init__.py  ultimate_dockerfile.txt
backend/src/omega/agents/: __init__.py  base_agent.py  capability_matcher.py  dual_mode_base.py  echo.py  mock_agent.py  orchestrator.py  prompt_optimizer.py  repository.py  research.py  workflow_planner.py
backend/src/omega/agents/capability_matcher/: Dockerfile  agent.py  requirements.txt
backend/src/omega/agents/code_generator/: Dockerfile  agent.py  requirements.txt
backend/src/omega/agents/code_generator/internal/: llm_adapter.py
backend/src/omega/agents/devops_discovery/: Dockerfile  agent.py
backend/src/omega/agents/math_solver/: Dockerfile  agent.py  requirements.txt
backend/src/omega/agents/migration_assistant/: agent.py
backend/src/omega/agents/mock_agent/: Dockerfile  agent.py  requirements.txt
backend/src/omega/agents/orchestrator/: Dockerfile  agent.py  requirements.txt
backend/src/omega/agents/project_architect/: Dockerfile  agent.py  agent.py.backup  requirements.txt
backend/src/omega/agents/prompt_optimizer/: Dockerfile  agent.py  requirements.txt
backend/src/omega/agents/research/: Dockerfile  requirements.txt
backend/src/omega/agents/weather/: Dockerfile  agent.py
backend/src/omega/agents/workflow_planner/: Dockerfile  agent.py  requirements.txt
backend/src/omega/agents/workflow_planner/internal/: llm_adapter.py
backend/src/omega/core/: __init__.py  agent_discovery.py  base_entity.py  base_tool.py  config.py  dual_mode_agent.py  registerable_dual_mode_agent.py  registerable_mcp_tool.py
backend/src/omega/core/communication/: connection_manager.py  redis_client.py  websocket_server.py
backend/src/omega/core/factories/: __init__.py  factories.py  message_factory.py  reasoning.py  task_factory.py  task_result_factory.py  tool_cache.py
backend/src/omega/core/models/: capabilities.py  message.py  reasoning.py  system.py  task_models.py  tool.py  websocket.py
backend/src/omega/core/orchestrator/: Dockerfile  requirements.txt
backend/src/omega/core/schemas/: agent_feedback.json  message_envelope.json  task_result.json  workflow_schema.json
backend/src/omega/core/utils/: __init__.py  event_schema.py  llm_adapter.py  mcp_tool_builder.py  port_manger.py  redis_listener.py  redis_watcher.py  registry_helpers.py  task_utils.py
backend/src/omega/registry/: agent_discovery_protocol.py
backend/src/omega/services/agent_registry/: Dockerfile  service.py
backend/src/omega/services/collaborative_workflow_generator/: Dockerfile  service.py
backend/src/omega/services/mcp_registry/: Dockerfile  requirements.txt  service  service.py
backend/src/omega/services/registry_service/: Dockerfile  app.py
backend/src/omega/services/template_discovery/: Dockerfile  service.py
backend/src/omega/tools/: __init__.py  nlp_to_sql.py  translate.py
backend/src/omega/tools/calculator/: Dockerfile  tool.py
backend/src/omega/tools/code_analyzer/: Dockerfile  README.md  dockerfile.txt  documentation.md  requirements.txt  test_dependency_resolver.py  tool.py
backend/src/omega/tools/context7/: Dockerfile
backend/src/omega/tools/execute_sql/: Dockerfile  requirements.txt  tool.py
backend/src/omega/tools/execute_sql_tool/: execute_sql.py
backend/src/omega/tools/nlp_to_sql/: Dockerfile  tool.py
backend/src/omega/tools/summarize_text/: Dockerfile  tool.py
backend/src/omega/tools/summarize_text_tool/: summarize_text.py
backend/src/omega/tools/translate_text/: Dockerfile  requirements.txt  tool.py
backend/src/omega/tools/web_search/: Dockerfile  requirements.txt  tool.py
backend/src/omega/tools/web_search_tool/: web_search.py
backend/src/omega/ui/: Dockerfile  app.py  requirements.txt
backend/src/omega/workflows/: template_repository.py  workflow_template.py  workflow_templates.py
backend/src/omega/workflows/templates/: README.md  database_driven_website.yaml
backend/tests/: __init__.py  dual_mode_base.py  e2e_test_orchestrator.py  e2e_trigger.py  inject_task.py  redis_test.py  run_finance_agent.py  run_research_agent.py  run_triage_agent_flow.py  temp.py  test_base_agent_local.py  test_capability_matching.py  test_migration_assistant_agent.py
backend/tests/integration/: __init__.py
dev_ops/: github_workflows_ci.yaml
docs/: AI Code Migration Platform Backend Implementation Directives.md  bootstrap.md  dual_mode_agent_readme.md  omega_progress_report.md  tool_builder_pattern.md
frontend/: OMEGA UI_README.md  package-lock.json  package.json  setup.ps1  tailwind.config.js  tsconfig.json  types-and-workflow-integration-summary.md  websocket-integration-summary.md  workflow-builder-integration-summary.md
frontend/scripts/: setup-env.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/agents/: agent-create.tsx  agent-detail.tsx  agent-list.tsx  page.tsx
frontend/src/components/layout/: sidebar.tsx  theme-toggle.tsx
frontend/src/hooks/: use-mcp.ts  use-workflow-execution.ts  use-workflows.ts
frontend/src/providers/: agent-provider.tsx
frontend/src/types/: index.ts
keys/: claude  claude.pub
(+40 files in other folders)
