[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega"
version = "0.1.0"
description = "OMEGA - Orchestrated Multi-Expert Gen Agents Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "OMEGA Team"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "redis>=5.0.0",
    "pymongo>=4.5.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
]

ai = [
    "openai>=1.75.0",
]

[project.scripts]
omega = "omega.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omega = [
    "core/schemas/*.json",
    "workflows/templates/*.yaml",
    "*.yaml",
    "*.json",
]